4.0.0.beta.2: Fix dropdown focus behavior, minor changes/bug fixes
* Explicitly give toolbox 100% width
* Fix behavior of thumbnails on small screens
* When both :focus and :active applied, prioritize :active
* Remove focus from dropdown checkboxes once the dropdown has been opened
* Changing more styles from the refreshed/mediawiki directory (e.g., move toc styles there)
* Move page indicators
* Improve table of contents and thumbnail styles on small
* Give the header search section overflow:visible (seems to fix issue in Edge where scrollbar appears in the search dropdown on big)

--- a/refreshed/mediawiki/skinning.interface.css
+++ b/refreshed/mediawiki/skinning.interface.css
@@ -20,10 +20,3 @@
 	padding: 0;
 	border: 0;
 }
-
-/* stopping wikitables from overflowing, adding .scrollshadow-type scrolling */
-#bodyContent .wikitable {
-	overflow-x: auto;
-	display: block;
-	border: 0;
-}
