--- a/refreshed/styles/screen/common.less
+++ b/refreshed/styles/screen/common.less
@@ -751,51 +751,6 @@ a.feedlink {
 	float: right;
 }
 
-#mw-normal-catlinks::before,
-.toctitle h2::before {
-	content: '';
-	display: inline-block;
-	vertical-align: text-bottom;
-	background-position: center center;
-	background-size: 100% 100%;
-	background-repeat: no-repeat;
-	margin-right: 0.3em;
-}
-
-#mw-normal-catlinks::before {
-	width: 1em;
-	height: 1em;
-}
-
-.toctitle h2::before {
-	width: 1.2em;
-	height: 1.2em;
-}
-
-[dir = ltr] #mw-normal-catlinks::before {
-	/* ooui-icon-tag-ltr */
-	background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='%230645ad'%3E%3Cpath d='M18.72 11L9 1.28A1 1 0 0 0 8.35 1H2a1 1 0 0 0-1 1v6.35a1 1 0 0 0 .28.65L11 18.72a1 1 0 0 0 1.37 0l6.38-6.38a1 1 0 0 0-.03-1.34zM5 7a2 2 0 1 1 2-2 2 2 0 0 1-2 2z'/%3E%3C/svg%3E );
-}
-
-[dir = rtl] #mw-normal-catlinks::before {
-	/* ooui-icon-tag-rtl */
-	background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='%230645ad'%3E%3Cpath d='M1.2 12.3l6.4 6.4c.4.4 1 .4 1.4 0L18.7 9c.2-.2.3-.4.3-.6V2c0-.6-.4-1-1-1h-6.4c-.2 0-.5.1-.6.3L1.3 11c-.4.4-.4 1-.1 1.3zM13 5c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2z'/%3E%3C/svg%3E%0A );
-}
-
-[dir = ltr] .toctitle h2::before {
-	/* ooui-icon-stripeToC-ltr */
-	background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath d='M5 3h14v2H5zm0 6h14v2H5zm0 6h14v2H5zM1 3h2v2H1zm0 6h2v2H1zm0 6h2v2H1z'/%3E%3C/svg%3E );
-}
-
-[dir = rtl] .toctitle h2::before {
-	/* ooui-icon-stripeToC-rtl */
-	background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath d='M1 3h14v2H1zm0 6h14v2H1zm0 6h14v2H1zM17 3h2v2h-2zm0 6h2v2h-2zm0 6h2v2h-2z'/%3E%3C/svg%3E );
-}
-
-#catlinks {
-	margin: 0;
-	font-family: inherit;
-}
 /*******************************************************************************
 ************************************ FOOTER ************************************
 *******************************************************************************/
