--- a/refreshed/styles/screen/mixins-private.less
+++ b/refreshed/styles/screen/mixins-private.less
@@ -91,6 +91,8 @@ clicked) */
 
 	  /* search dropdown should be wide enough to fit search bar */
 		width: @header-search-width;
+    /* prevent scroll bar from appearing in search bar in Edge */
+    overflow-y: visible;
 	}
 
   #searchInput {
