--- a/refreshed/styles/screen/small.less
+++ b/refreshed/styles/screen/small.less
@@ -107,7 +107,8 @@
   }
 
   #toc {
-    font-size: 1.5em;
+    font-size: 1.25em;
+    line-height: 1.2em;
     width: 100%;
     .box-sizing( border-box );
   }
@@ -121,16 +122,18 @@
   .thumb {
   	width: 100% !important;
   	margin: 0 !important;
+    text-align: center;
   }
 
   div.thumbinner { /* need to specify div so it can overwrite the CSS in commonContent.css */
-  	width: auto !important;
+  	width: 50% !important;
   	padding: 0.75em 0 !important;
   	margin-bottom: 0.5em;
+    display: inline-block;
   }
 
   .thumbinner img {
-  	width: 50%;
+  	width: 100%;
   	height: auto;
   	border: 0 !important;
   }
