--- a/refreshed/styles/screen/variables.less
+++ b/refreshed/styles/screen/variables.less
@@ -2,8 +2,8 @@
 @medium-layout-min-width: 720px;
 @medium-layout-max-width: 1000px;
 
-@big-layout-min-width: ( @medium-layout-max-width + 1px );
-@small-layout-max-width: ( @medium-layout-min-width - 1px );
+@big-layout-min-width: ( @medium-layout-max-width + 0.1px );
+@small-layout-max-width: ( @medium-layout-min-width - 0.1px );
 
 /********************************* z-indexes **********************************/
 
